# PokerX

./: .gitignore  .gitmodules  CMakeLists.txt  PlayersAndPolicies.puml  README.md  azure-pipelines.yml  create_subproj.py  design.md  design.mdj
Design/: APIDesign.txt  Design.puml  HardEvaluatorDesign.puml  ObserverPattern.puml  StateMachineDiagram.puml
data/2021-01-23_CO_NL10_SH_KCAGEPC11/: hh.com_Aaryn_284SH_2021.01.23_0.txt  hh.com_Abanderada_284SH_2021.01.23_0.txt  hh.com_Abnoba_284SH_2021.01.23_0.txt  hh.com_Aconcagua_284SH_2021.01.23_0.txt  hh.com_Adalberta_284SH_2021.01.23_0.txt  hh.com_Aeria_284SH_2021.01.23_0.txt  (+319 more)
src/: CMakeLists.txt  Card.cpp  Card.h  CardCollection.cpp  CardCollection.h  CardCollectionObserver.h  CommunityCards.cpp  CommunityCards.h  Deck.cpp  Deck.h  Error.h  Errors.h  Evaluator.cpp  Evaluator.h  Hand.cpp  Hand.h  HoleCards.cpp  HoleCards.h  ISubject.h  Poker.cpp  Poker.h  PokerX.cpp  RandomNumberGenerator.cpp  RandomNumberGenerator.h  main.cpp
src.old/: CMakeLists.txt  ISubject.h  Poker.cpp  Poker.h
src.old/card/: Card.h  CardCollection.h  CommunityCards.cpp  HoleCards.cpp
src.old/engine/: IEntity.h
src.old/engine/state/: ButtonMoves.cpp  ButtonMoves.h  IState.h
src.old/eval/: Hand.cpp  Hand.h
src.old/events/: Event.cpp  Event.h
src.old/events/dealer_event/: DealFlop.cpp  DealFlop.h  DealHoleCards.cpp  DealRiver.cpp  DealRiver.h  DealerEvent.h  ResetGame.h  Showdown.cpp  Showdown.h
src.old/events/player_event/: PlayerEvent.h  PostBigBlind.cpp  PostSmallBlind.cpp  PostSmallBlind.h  RotatePlayers.cpp
src.old/events/time_event/: BeginGame.cpp  BeginGame.h  NextStreet.cpp  TimeEvent.cpp
src.old/game/: Players.cpp  Players.h  Pot.cpp  Pot.h  Street.h  Table.cpp
src.old/players/: ActionType.h  Fish.h  LooseAggressive.h  Player.cpp  PreflopRaiser.cpp  Random.h  TightAggressive.cpp  TightAggressive.h
src.old/utils/: ArgMax.h  Log.h
src/card/: Card.cpp  Card.h  CardCollection.cpp  CardCollection.h  CardCollection2.cpp  CardCollection2.h  CommunityCards.cpp  CommunityCards.h  Deck.cpp  Deck.h  HoleCards.cpp  HoleCards.h  RestrictedCardCollection.cpp  RestrictedCardCollection.h
src/cards/: CMakeLists.txt  Card.cpp  Card.h  CardCollection.cpp  CardCollection.h  CommunityCards.cpp  CommunityCards.h  Deck.cpp  HoleCards.cpp  HoleCards.h
src/engine/: AllIn.cpp  AllInPlayer.cpp  AllPlayersEqual.cpp  BigBlind.cpp  ButtonMoves.cpp  CMakeLists.txt  Call.cpp  CallStationPlayer.cpp  Card.cpp  CardCollection.cpp  Check.cpp  CheckerPlayer.cpp  CommunityCards.cpp  ConsolePlayer.cpp  DealFlop.cpp  DealHoleCards.cpp  DealRiver.cpp  DealTurn.cpp  Deck.cpp  EndStreet.cpp  EnterStreet.cpp  Evaluator.cpp  Flop.cpp  Fold.cpp  FolderPlayer.cpp  GameVariables.cpp  GenericPlayer.cpp  Hand.cpp  HandEvaluator.cpp  HandEvaluator.old.cpp  HoleCards.cpp  IEntity.h  NextPlayer.cpp  NextStreet.cpp  NoLimitHoldem.cpp  Player.cpp  PlayerManager.cpp  PlayerToAct.cpp  PokerEngine.cpp  Policy.cpp  (+20 more)
src/engine/hands/: Best5.cpp  Flush.cpp  FourOfAKind.cpp  FullHouse.cpp  Hand.cpp  Hand.old.cpp  HighCard.cpp  IHand.cpp  Pair.cpp  RoyalFlush.cpp  Straight.cpp  StraightFlush.cpp  ThreeOfAKind.cpp  TwoPair.cpp
src/eval/: Evaluator.cpp  Evaluator.h  Hand.cpp  Hand.h
src/events/: Event.cpp  Event.h  EventPtr.h
src/events/dealer_event/: DealFlop.cpp  DealHoleCards.cpp  DealHoleCards.h  DealRiver.cpp  DealTurn.cpp  DealTurn.h  DealerEvent.cpp  DealerEvent.h  ResetGame.cpp  Showdown.cpp  Showdown.h
src/events/player_event/: NextPlayer.cpp  NextPlayer.h  PlayerAction.cpp  PlayerAction.h  PlayerEvent.cpp  PlayerEvent.h  PostBigBlind.cpp  PostBigBlind.h  PostSmallBlind.cpp  PostSmallBlind.h  RotatePlayers.cpp  RotatePlayers.h
src/events/time_event/: BeginGame.cpp  BeginGame.h  EndGame.cpp  EndGame.h  NextStreet.cpp  NextStreet.h  TimeEvent.cpp  TimeEvent.h
src/game/: Dealer.cpp  Dealer.h  GamePlay.h  Players.cpp  Players.h  Positions.cpp  Positions.h  Pot.cpp  Pot.h  Seat.cpp  Seat.h  Street.h  Table.cpp  Table.h
src/players/: ActionType.h  CallStation.cpp  CallStation.h  Checker.cpp  Checker.h  Fish.cpp  FoldStation.cpp  FoldStation.h  LooseAggressive.cpp  Player.cpp  Player.h  PreflopRaiser.h  Raiser.cpp  Raiser.h  Random.cpp
src/utils/: Counter.h  EqualityChecker.h
tests/: AConsoleGame.cpp  ButtonMovesTests.cpp  CMakeLists.txt  CallStationTests.cpp  CardCollectionTests.cpp  CardTests.cpp  CommunityCardTests.cpp  ContainerTests.cpp  CounterTests.cpp  DealerTests.cpp  DeckTests.cpp  EngineTests.cpp  EvaluatorTests.cpp  EventTests.cpp  ExceptionTests.cpp  GameScenarioTests.cpp  GameVariableObserverTests.cpp  GameVariableTests.cpp  HandEvaluatorTests.cpp  HandEvaluatorTests.old.cpp  HandTests.cpp  HoleCardTests.cpp  IStateTests.cpp  PlayerManagerTests.cpp  PlayerTests.cpp  PlayersTests.cpp  PokerEngineIntegrationTests.cpp  PokerEngineStateMachineTests.cpp  PokerEngineStatesTest.cpp  PokerTests.cpp  PolicyTests.cpp  PositionsTests.cpp  PotTests.cpp  PreflopTests.cpp  ResetStateTests.cpp  RestrictedCardCollectionTests.cpp  SinglePokerHandTests.cpp  StateMachineTests.cpp  StateTests.cpp  TableTests.cpp  (+1 more)
tests.old/: CMakeLists.txt  CardCollectionTests.cpp  CardTests.cpp  CommunityCardTests.cpp  DeckTests.cpp  EvaluatorTests.cpp  EventTests.cpp  FullGameTests.h  HoleCardTests.cpp  PlayerTests.cpp  PotTests.cpp  RestrictedCardCollectionTests.cpp  TableTests.cpp
tests/AbstractStateMachineTests/: LightHigh.cpp  LightHigh.h  LightLow.cpp  LightLow.h  LightOff.cpp  LightOff.h  eState.h  enumState.h
tests/Mockups/: FakePlayer.h  MockCard.h  MockDeck.h  MockEngine.h  MockGameVariables.h  MockPlayer.h  MockPlayerManager.h  MockPokerEngine.h  MockPot.h  MockState.h
tests/PokerEngineUnitTests/: AllPlayersEqualTests.cpp  BettingTests.cpp  CMakeLists.txt  PokerEngineTests.h  PreflopTests.cpp  SplitPotTests.cpp
tests/hands/: FOAKTests.cpp  FlushTests.cpp  FullHouseTests.cpp  HighCardTests.cpp  PairTests.cpp  RoyalFlushTests.cpp  StraightFlushTests.cpp  StraightTests.cpp  TOAKTests.cpp  TestHands.h  TwoPairTests.cpp
tests2/: EngineTests.cpp  PokerTests.cpp
(+139 files in other folders)
